<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_mas_bottom"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu_more"/>
    <item
        android:id="@+id/nav_amigos_bottom"
        android:icon="@drawable/ic_amigos"
        android:title="@string/menu_amigos"/>
    <item
        android:id="@+id/nav_muro"
        android:icon="@drawable/ic_muro"
        android:title="@string/menu_muro"/>
    <item
        android:id="@+id/nav_reportes_bottom"
        android:icon="@drawable/ic_reporte"
        android:title="@string/menu_reporte"/>
    <item
        android:id="@+id/nav_miperfil_bottom"
        android:icon="@drawable/ic_perfil"
        android:title="@string/menu_miperfil"/>




</menu>